<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/enterDetail_background">

    <LinearLayout
        android:id="@+id/enterDetails_login_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/login_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/login_notice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/login_notice"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/or"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/guest"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterDetails_login_container">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/enterDetails_name_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Full Name"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/enterDetails_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-8dp"
                    android:background="@color/white"
                    android:singleLine="true"
                    android:textSize="18dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/enterDetails_email_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Email"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/enterDetails_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-8dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/white"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textSize="18dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/enterDetails_phoneNo_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Phone Number"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/phone_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/enterDetails_phoneNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-8dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/white"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textSize="18dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/enterDetails_carReg_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/car_reg">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/enterDetails_carReg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-8dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/white"
                    android:singleLine="true"
                    android:textSize="18dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/carWash_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car_wash" />

                <CheckBox
                    android:id="@+id/elderly_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="0dp"
                    android:text="@string/elderly" />
            </LinearLayout>

            <TextView
                android:id="@+id/enterDetails_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/user_detail_note"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/confirm_Btn"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/confirm" />

        </LinearLayout>
    </ScrollView>

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/progress"
        style="@style/SpinKitView.Large.DoubleBounce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:SpinKit_Color="@color/primary_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>