<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginBackground"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".activities.Prelogin.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="143dp"
        android:layout_height="100dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/airpark_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/airpark_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:autofillHints="email"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-8dp"
            android:layout_marginLeft="-8dp"
            android:background="@color/white"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextTextPassword2"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="25dp"
        android:autofillHints="password"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-8dp"
            android:layout_marginLeft="-8dp"
            android:background="@color/white"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="50dp"
        android:text="@string/login_button"
        android:textStyle="bold"
        app:backgroundTint="@color/primary_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="18dp"
        android:text="@string/dont_have_account"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/space2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <Space
        android:id="@+id/space2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:onClick="onClick"
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/space2"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="10dp"
        android:text="@string/or"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:onClick="onClick"
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/exploreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/explore"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="OnClick" />

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/progress"
        style="@style/SpinKitView.Large.DoubleBounce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:SpinKit_Color="@color/primary_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>